Further refactoring of oxalis-outbound.