@@ -3,6 +3,7 @@ package eu.peppol.smp;
 import eu.peppol.BusDoxProtocol;
 import eu.peppol.security.CommonName;
 import no.difi.vefa.peppol.common.model.Endpoint;
+import no.difi.vefa.peppol.common.model.TransportProfile;
 
 import java.net.MalformedURLException;
 import java.net.URL;
@@ -10,23 +11,25 @@ import java.net.URL;
 public class PeppolEndpointData {
 
     URL url;
-    BusDoxProtocol busDoxProtocol;
+
+    TransportProfile transportProfile;
+
     CommonName commonName = null;
 
-    public PeppolEndpointData(URL url, BusDoxProtocol busDoxProtocol) {
+    public PeppolEndpointData(URL url, TransportProfile transportProfile) {
         this.url = url;
-        this.busDoxProtocol = busDoxProtocol;
+        this.transportProfile = transportProfile;
     }
 
-    public PeppolEndpointData(URL url, BusDoxProtocol busDoxProtocol, CommonName commonName) {
-        this(url, busDoxProtocol);
+    public PeppolEndpointData(URL url, BusDoxProtocol transportProfile, CommonName commonName) {
+        this(url, transportProfile.toVefa());
         this.commonName = commonName;
     }
 
     public PeppolEndpointData(Endpoint endpoint) {
         try {
-            url = new URL(endpoint.getAddress());
-            busDoxProtocol = BusDoxProtocol.AS2;
+            url = endpoint.getAddress().toURL();
+            transportProfile = BusDoxProtocol.AS2.toVefa();
             commonName = CommonName.valueOf(endpoint.getCertificate().getSubjectX500Principal());
         } catch (MalformedURLException e) {
             throw new IllegalStateException(e.getMessage(), e);
@@ -38,8 +41,8 @@ public class PeppolEndpointData {
         return url;
     }
 
-    public BusDoxProtocol getBusDoxProtocol() {
-        return busDoxProtocol;
+    public TransportProfile getTransportProfile() {
+        return transportProfile;
     }
 
     /**
@@ -55,7 +58,7 @@ public class PeppolEndpointData {
     public String toString() {
         final StringBuilder sb = new StringBuilder("PeppolEndpointData{");
         sb.append("url=").append(url.toExternalForm());
-        sb.append(", busDoxProtocol=").append(busDoxProtocol);
+        sb.append(", transportProfile=").append(transportProfile);
         sb.append(", commonName=").append(commonName);
         sb.append('}');
         return sb.toString();
@@ -67,7 +70,7 @@ public class PeppolEndpointData {
         if (o == null || getClass() != o.getClass()) return false;
         PeppolEndpointData that = (PeppolEndpointData) o;
         if (url != null ? !url.equals(that.url) : that.url != null) return false;
-        if (busDoxProtocol != null ? !busDoxProtocol.equals(that.busDoxProtocol) : that.busDoxProtocol != null)
+        if (transportProfile != null ? !transportProfile.equals(that.transportProfile) : that.transportProfile != null)
             return false;
         if (commonName != null ? !commonName.equals(that.commonName) : that.commonName != null) return false;
         return true;
